compiler-core/src/snapshots/gleam_core__requirement__tests__read_dependency_with_good_first_field_and_wrong_second_field.snap
---
source: compiler-core/src/requirement.rs
expression: error.to_string()
---
TOML parse error at line 1, column 24
  |
1 | github = { path = "a", stray = "b" }
  |                        ^^^^^
unknown field `stray`
