compiler-core/src/snapshots/gleam_core__requirement__tests__read_empty_dependency.snap
---
source: compiler-core/src/requirement.rs
expression: error.to_string()
---
TOML parse error at line 1, column 10
  |
1 | github = {}
  |          ^^
expecting exactly one of `version`, `path`, or both `git` and `ref`
