compiler-core/src/snapshots/gleam_core__requirement__tests__read_git_requirement_with_empty_path.snap
---
source: compiler-core/src/requirement.rs
expression: error.to_string()
---
TOML parse error at line 2, column 24
  |
2 |             monorepo = { git = "https://github.com/gleam-lang/gleam.git", ref = "main", path = "" }
  |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
git dependency path must not be empty
