compiler-core/src/snapshots/gleam_core__requirement__tests__read_wrong_dependency.snap
---
source: compiler-core/src/requirement.rs
expression: error.to_string()
---
TOML parse error at line 1, column 10
  |
1 | github = { a = "123", wibble = "123" }
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
This is not a valid dependency requirement object.
Hint: The documentation for the format can be viewed at
https://gleam.run/writing-gleam/gleam-toml/
